Upgrade Install Agent2 Windows

--- a/roles/zabbix_front/templates/zabbix.conf.php.j2
+++ b/roles/zabbix_front/templates/zabbix.conf.php.j2
@@ -12,7 +12,7 @@ $DB['PASSWORD']			= '{{ db_user_pass_web }}';
 $DB['SCHEMA']			= '';
 
 // Used for TLS connection.
-$DB['ENCRYPTION']		= false;
+$DB['ENCRYPTION']		= true;
 $DB['KEY_FILE']			= '';
 $DB['CERT_FILE']		= '';
 $DB['CA_FILE']			= '';
